force-app/main/default/objects/Employee__c/fields/Actual_Pet_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Actual_Pet_Hotel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This employee works at the pet hotel.</description>
    <inlineHelpText>This employee works at the pet hotel.</inlineHelpText>
    <label>Pet Hotel</label>
    <referenceTo>Actual_Pet_Hotel__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>